<resources>
    <string name="app_name">Banco Taller</string>
    <string name="action_saldo">Organizar por saldos</string>
    <string name="action_filtrar_usuario">Filtrar por nombres</string>

    <string name="action_agregar_cuenta">Agregar Cuentas</string>
    <string name="txtAgregar">AGREGAR CUENTA</string>
    <string name="nrodeCuenta">Numero de la cuenta</string>
    <string name="nombreCuenta">Nombre</string>
    <string name="tipoAhorro">Ahorro</string>
    <string name="tipoCorriente">Corriente</string>
    <string name="saldo">Saldo</string>
    <string name="tipoCuenta">Tipo de Cuenta</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="regresar">Regresar</string>
</resources>
